<resources>
    <string name="app_name">WorldTime</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Widget WorldTime</string>
    <string name="configure">Configure</string>
    <string name="widget_settings">WIDGET_SETTINGS</string>
    <string name="time_pattern_key">TIME_PATTERN</string>
    <string name="selected_city1_key">CITY_1</string>
    <string name="selected_city2_key">CITY_2</string>
    <string name="selected_city3_key">CITY_3</string>
    <string name="selected_city4_key">CITY_4</string>


    <string name="sydney_timezone">Australia/Sydney</string>
    <string name="nyc_timezone">America/New_York</string>
    <string name="sivar_timezone">America/El_Salvador</string>
    <string name="bochum_timezone">Europe/Berlin</string>
    <string name="toronto_timezone">America/Toronto</string>

    <string name="hour_format_12">hh:mm aa</string>
    <string name="hour_format_24">HH:mm</string>
    <string name="date_format">EEEE dd MMM</string>
    <string name="day_format">EEEE</string>

    <string name="text_sydney">Sydney</string>
    <string name="text_nyc">NYC</string>
    <string name="text_sivar">Sivar</string>
    <string name="text_bochum">Bochum</string>
    <string name="text_toronto">Toronto</string>
    <string name="text_none"> - None - </string>

    <string-array name="settings_select_city">
        <item>@string/text_sydney</item>
        <item>@string/text_nyc</item>
        <item>@string/text_sivar</item>
        <item>@string/text_bochum</item>
        <item>@string/text_toronto</item>
        <item>@string/text_none</item>
    </string-array>

    <string name="introductory_text">Welcome to this App!</string>
    <string name="explanation_text">It calculates and displays the time of up to 4 different cities. You can choose between Sydney, New York City, San Salvador, Toronto and Bochum.</string>
    <string name="settings_text">Please define the settings by clicking on the menu icon in the navigation bar. Then just enjoy!</string>
    <string name="author_text">- Created by Hugo and Sofia, 2020 - \n v4.0</string>
    <string name="icon_text">Icon made by Freepik from www.flaticon.com</string>
    <string name="time_format_text">Please choose a time format:</string>
    <string name="select_cities_text">Please choose cities:</string>
    <string name="text_select_city_1">City no. 1</string>
    <string name="text_select_city_2">City no. 2</string>
    <string name="text_select_city_3">City no. 3</string>
    <string name="text_select_city_4">City no. 4</string>

    <string name="navbar_settings">Settings</string>
    <string name="navbar_timecalc">Time Calculator</string>
    <string name="navbar_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navbar_timer">Tofis Timer</string>

    <string name="settings_btn12h">12h-format</string>
    <string name="settings_btn24h">24h-format</string>

    <string name="convert_time_text">Input the time you want to convert:</string>
    <string name="calculate_btn_text">Calculate time</string>
    <string name="day_diff_before_text">- 1 day</string>
    <string name="day_diff_after_text">+ 1 day</string>

    <string name="timer_start">Start</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_explanation">This is a simple timer that makes a sound every 30 seconds. Perfect for your stretching exercises :)</string>


</resources>
